# biomgi_publications

./: BioMGI.bib  BioMGI.bib.bak  FORMAT.md  README.md  publications.md  pyproject.toml  requirements.txt
biomgi_publications/: bib2md.py
tests/: test_biomgi.py
